--- a/config.json.example
+++ b/config.json.example
@@ -17,6 +17,7 @@
    "min-ratelimit":10,
    "min-ratelimit-retweet":20,
    "min-ratelimit-search":40,
+   "config_reload_time":600,
    "consumer-key":"",
    "consumer-secret":"",
    "access-token-key":"",
